Add Notion OAuth Endpoint

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
     application:
         name: ncm
+    profiles:
+        include:
+            - secret
 
 notion:
     base-url: https://api.notion.com/v1
